# PocketFlow

./: .coderabbit.yaml  .gitignore  README.md  create_pocket_pdb.py  finetuning.py  main_generate.py  main_generate_config.py  make_pretrain_data.py  mise.toml  pretraining.py  pyproject.toml  pyrightconfig.json
.cursor/commands/: claude-md-style.md  docstring.md  fix-merge-conflicts-specific.md  fix-merge-conflicts.md  generate-pr-description.md  lint-suite.md  run-all-tests-and-fix.md
.cursor/rules/: gpt-5.md
data/reference_ligands/: cdk10-reference.sdf  cdk5c-reference.sdf
pocket_flow/: __init__.py  generate.py
pocket_flow/gdbp_model/: __init__.py  atom_flow.py  bond_flow.py  encoder.py  focal_net.py  layers.py  net_utils.py  pocket_flow.py  position_predictor.py  types.py
pocket_flow/utils/: ParseFile.py  __init__.py  data.py  dataset_types.py  file_utils.py  generate_utils.py  load_dataset.py  metrics.py  model_io.py  neighbor_search.py  parse_file.py  process_raw.py  residues_base.py  time_utils.py  train.py  transform.py  transform_utils.py
pocket_splitting/: __init__.py  create_pocket_pdb.py  process_raw.py
tests/pocket_flow/: test_generate.py
tests/pocket_flow/gdbp_model/: test_atom_flow.py  test_bond_flow.py  test_encoder.py  test_focal_net.py  test_layers.py  test_net_utils.py  test_pocket_flow.py  test_position_predictor.py  test_types.py
tests/pocket_flow/utils/: test_data.py  test_metrics.py  test_parse_file.py  test_transform.py
training/: __init__.py  experiment.py  finetuning.py  load_dataset.py  make_pretrain_data.py  pretraining.py
training/tests/: __init__.py
