[project]
name = "pocketflow"
version = "0.0.0"
description = "Local runner for PocketFlow"
requires-python = "~=3.12"

# Atomica-style note:
# We keep runtime Python deps under [tool.pixi.pypi-dependencies] instead of [project].dependencies
# so Pixi is the single source of truth for environments.
# If you plan to publish/install this as a normal Python package via pip, consider also mirroring
# these deps back into [project].dependencies for packaging metadata.

[tool.basedpyright]
pythonVersion = "3.12"
# Tell basedpyright to use the Pixi-managed env instead of guessing .venv
venvPath = ".pixi/envs"
venv = "default"
include = ["."]
exclude = [
  ".pixi",
  ".venv",
  "**/__pycache__",
  "**/node_modules",
  "client",
]
reportAny = "none"
reportMissingTypeStubs = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"
# reportUnknownMemberType = "none"
# reportUnknownVariableType = "none"
# reportUnknownArgumentType = "none"
# reportUnknownParameterType = "none"
reportImportCycles = "information"
reportImplicitStringConcatenation = "none"
# reportCallInDefaultInitializer = "none"
reportUnnecessaryTypeIgnoreComment = "information"

[tool.pixi.workspace]
name = "pocketflow"
channels = ["conda-forge"]
# PyG stack is not available on linux-aarch64 on conda-forge.
platforms = ["osx-arm64", "linux-64"]

# -----------------------------
# Environments
# -----------------------------
[tool.pixi.environments]
# default env = runtime / inference
default = { features = [], solve-group = "core" }
# dev env = runtime + dev tooling
dev = { features = ["dev"], solve-group = "core" }
# tooling-only env (fast CI for lint/typecheck; does NOT pull torch/rdkit/etc)
lint = { features = ["dev"], solve-group = "lint", no-default-feature = true }

# -----------------------------
# Conda packages (native / compiled / big stack)
# -----------------------------
[tool.pixi.dependencies]
# Chem / native stack
rdkit = "*"
tqdm = "*"
pyyaml = "*"
python-lmdb = "*"
# ML core
pytorch = "*"
pytorch_geometric = "*"
# Pocket splitting
pymol-open-source = "*"
# Training dependencies
tensorboard = "*"

# -----------------------------
# PyPI packages (runtime)
# -----------------------------
[tool.pixi.pypi-dependencies]
# Looser “compatibility” constraints; the lockfile pins exact builds for reproducibility.
easydict = ">=1.13"
imageio = ">=2.33.1,<3"
meeko = ">=0.4.0"
torchdiffeq = ">=0.2.3,<0.3"
zuko = ">=1.0.1,<2"

# -----------------------------
# Features
# -----------------------------
[tool.pixi.feature.dev.dependencies]
python = "~=3.12"
ripgrep = "*"

[tool.pixi.feature.dev.pypi-dependencies]
# Python tooling via PyPI
basedpyright = "*"
pytest = "*"

# -----------------------------
# Tasks
# -----------------------------
[tool.pixi.tasks]
# Runtime (default env)
smoke = "python -c \"import torch, torch_geometric; print('torch', torch.__version__); print('pyg', torch_geometric.__version__)\""
inspect-ckpt = "python scripts/inspect_ckpt.py ckpt/ZINC-pretrained-255000.pt"
test-load-ckpt = "python scripts/test_load_ckpt.py"
# Dev/tooling tasks (recommended: run with `pixi run -e lint ...` or `pixi run -e dev ...`)
check-py = "ruff check . && ruff format --check ."
fix-py = "ruff format . && ruff check --fix ."
check-toml = "tombi lint"
fix-toml = "tombi format"
check-pytype = "basedpyright ."
check = "ruff check . && ruff format --check . && tombi lint && basedpyright ."

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = ["B008"]  # ignore function call in argument defaults

[tool.ruff.lint.isort]
known-first-party = ["pocket_flow", "pocket_splitting"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.tombi]
files.include = ["**/*.toml"]
